--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header>
     <div class="container">
-      <img src="/Photo/A.jpg" alt="IDOWU OLUWATOSIN ABASI-IFREKE" class="profile-pic" />
+      <img src="/A.jpg" alt="IDOWU OLUWATOSIN ABASI-IFREKE" class="profile-pic" />
       <h1>IDOWU OLUWATOSIN ABASI-IFREKE</h1>
       <p>Data Analyst | Excel · Power BI · Python</p>
     </div>
@@ -30,7 +30,7 @@
       <h2>Projects</h2>
 
       <div class="project-card">
-        <img src="/Photo/RESULT OF A COOKIE STORE USING POWER PIVOT .png" alt="Food Business Dashboard">
+        <img src="/RESULT OF A COOKIE STORE USING POWER PIVOT .png" alt="Food Business Dashboard">
         <div>
           <h3>Food Business Analysis (Excel)</h3>
           <p>Tracked sales and expenses for a food vendor using pivot tables and dashboards.</p>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="project-card">
-        <img src="/Photo/download (1).jpeg" alt="Power BI Dashboard">
+        <img src="/download (1).jpeg" alt="Power BI Dashboard">
         <div>
           <h3>Community Service Sentencing (Power BI)</h3>
           <p>Analyzed offender data and built an interactive dashboard to show patterns in Lagos court cases.</p>
@@ -48,7 +48,7 @@
       </div>
 
       <div class="project-card">
-        <img src="/Photo/download.png" alt="Python data project">
+        <img src="/download.png" alt="Python data project">
         <div>
           <h3> Program Data Cleaning (Python)</h3>
           <p>Cleaned health data using pandas, and visualized trends with matplotlib.</p>
