--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div>
           <h3>Community Service Sentencing (Power BI)</h3>
           <p>Analyzed offender data and built an interactive dashboard to show patterns in Lagos court cases.</p>
-          <a href="/Tosin Power Bi project.pbix">View Projects</a>
+          <a href="Tosin Power Bi project.pbix">View Projects</a>
         </div>
       </div>
 
@@ -52,7 +52,7 @@
         <div>
           <h3> Program Data Cleaning (Python)</h3>
           <p>Cleaned health data using pandas, and visualized trends with matplotlib.</p>
-          <a href="/Creating a data Frame .ipynb">View Projects</a>
+          <a href="Creating a data Frame .ipynb">View Projects</a>
         </div>
       </div>
     </section>
